infrastructure/k8s/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: usora-platform
  labels:
    name: usora-platform
    istio-injection: enabled
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
